day before presentation -J

--- a/src/pages/style/index.css
+++ b/src/pages/style/index.css
@@ -2,12 +2,19 @@
 @import url(https://fonts.googleapis.com/css?family=Creepster|Bungee+Spice|Nosifer|Rampart+One|Audiowide|Lemon|Mochiy+Pop+One|Fjalla+One|Lilita+One|Bowlby+One+SC|Gamja+Flower);
 
 .h1{
-font-family:"bungee spice", sans-serif;
+font-family:"Rampart One", sans-serif;
 }
 
 .h2{
-    font-family:"nosifer", sans-serif;
+    font-family:"Mochiy Pop one", sans-serif;
     font-size: x-large;
+}
+
+.teentrading{
+    position:relative;
+    text-align:center;
+    width: 85vw;
+    border-radius: 30px;
 }
 
 
@@ -53,19 +60,48 @@ font-family:"bungee spice", sans-serif;
 
 .styledimg {
     background-image: url(../../../assets/teentrading.jpg);
-background-size: contain;
-background-repeat: no-repeat;
-    width: 800px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 700px;
     height: 600px;
-
     position:relative;
-
- 
-
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     }
 
     .teentrade{
 object-fit: scale-down;
 width: 400px;
 height: 400px;
+    }
+
+.signUp{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+
+/* width: 400px; */
+/* height: 400px; */
+}
+    .btn-block{        
+        background-color: rgb(108, 172, 241);
+        box-shadow: 3px 3px rgb(78, 78, 78);
+        transition: background-color 0.3s, box-shadow 0.3s;
+        display: block;
+        /* text-align: center; */
+        /* font-size: large; */
+        width: 300px;
+
+    }
+
+    .btn-block:hover{
+        /* transition: background-color, box-shadow 0.3s; */
+        font-size: large;
+        background-color: rgb(104, 164, 229);
+        box-shadow: 7px 7px rgb(81, 74, 74);
     }
