--- a/src/pages/style/userProfilePage.css
+++ b/src/pages/style/userProfilePage.css
@@ -1,17 +1,19 @@
 
-.image-container {
-    padding: 2%;
+.welcome{
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center; 
+    align-items: center;
+}
+.invest{
+    width: 500px;
+    border-radius: 120px;
+    border: solid gray 2px;
+    box-shadow: 20px 20px;
+    margin-bottom: 40px;
 }
 
-.image {
-    background-image: url(../../../assets/highfive.jpg);
-background-size: contain;
-background-repeat: no-repeat;
-    width: 600px;
-    height: 400px;
-    position:relative;
-
+.buysell{
+    border: 5px black solid;
+    border-radius: 40px;
 }
